css/_ui.less
html,body {
	margin: 0;
	padding: 0;
	height: 100%;
	overflow: hidden
}
body,button {
	font-family: Helvetica,Arial,sans-serif;
	font-size: 16px;
}
ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
ul li {
	margin: 0;
	padding: 10px;
	line-height: 30px;

}

.toolbar {
	border: 1px solid #999;
	padding: 10px;
	background: #999
}
header,footer {
	height: 45px;
	line-height: 45px;
	background: #444;
	color: #ccc;
	padding: 0 10px;
	display:block;
	width:100%;
	text-align:center;
	.box-sizing;
}
body, .page {
  width:100%;
  height:100%;
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-box-align: stretch;
	-webkit-box-flex: 1
}
.page {
  position:absolute;
}
section, .page-content {
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-box-align: stretch;
	-webkit-box-flex: 1;
	-webkit-overflow-scrolling: touch;
	overflow: auto
}

.scroll-area {
	display: -webkit-box;
	-webkit-box-orient: vertical;
	-webkit-box-align: stretch;
	-webkit-box-flex: 1;
	margin-bottom: -1px
}

.hidden {
  display:none;
}

